created simple database and laid the groundworks for the api

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.12.4",
     "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
+    "passport": "^0.2.2",
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
