--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
