--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
