--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.12.4",
+    "connect-mongo": "^0.8.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-session": "^1.11.3",
     "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
