--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "express": "~4.12.4",
     "express-session": "^1.11.3",
     "mongoose": "^4.0.6",
+    "lodash": "~2.4.1",
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
-    "passport-facebook": "^2.0.0",
+    "jsonwebtoken": "^5.0.0",
+    "express-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.1"
   },
