--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "composable-middleware": "^0.3.0",
     "express-session": "^1.11.3",
     "mongoose": "^4.0.6",
     "lodash": "~2.4.1",
